# krunner_filesearch

./: CMakeLists.txt  Messages.sh  README.md  krunner_filesearch.kdev4
src/: CMakeLists.txt  filesearch.cpp  filesearch.h  krunner_filesearch.cpp  krunner_filesearch.h  plasma-runner-filesearch.desktop  plasma-runner-krunner_filesearch.desktop
